# meraki-orchestration

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: apply_template_config.py  backup_system.py  bind_to_template.py  check_template_binding.py  compare_backups.py  configure_firewall.py  configure_switch.py  configure_wireless.py  debug_wireless.py  enable_vlans.py  enable_vlans_all.py  export_switch_config.py  fix_wireless_vlans.py  get_vlans.py  group_policies.py  network_monitor.py  restore_from_backup.py  show_routes.py  template_manager.py  verify_branches.py  verify_config.py
